# lplog

./: .gitignore  Controller.cpp  Controller.h  Debug.cpp  Debug.h  Defer.h  Document.cpp  Document.h  Filter.cpp  Filter.h  LPlog.iss  Makefile  PatternTable.cpp  PatternTable.h  README.md  SaveFile.cpp  SaveFile.h  TODO.md  View.cpp  View.h  applicon.xpm  changelog  extract_dep.sh  lpglog.cbp  lplog.cbp  lplog.desktop  lplog.rc  main.cpp  meson.build
